--- a/EditorAvalonia/App.axaml
+++ b/EditorAvalonia/App.axaml
@@ -1,16 +1,14 @@
-<Application xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="EditorAvalonia.App"
-            
-			 RequestedThemeVariant="Dark"
-			 >
-	<!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
-	<Application.Resources>
-
-	</Application.Resources>
+<Application
+    x:Class="EditorAvalonia.App"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    RequestedThemeVariant="Dark">
+	<!--  "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options.  -->
+	<Application.Resources />
 	<Application.Styles>
 		<FluentTheme />
-		<StyleInclude Source="avares://EditorAvalonia/assets/ExpanderStyle.axaml"/>
+		<StyleInclude Source="avares://EditorAvalonia/assets/ExpanderStyle.axaml" />
+		<StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Simple/Simple.xaml" />
 	</Application.Styles>
 
 
