--- a/EditorAvalonia/views/editor/EditorWindow.axaml
+++ b/EditorAvalonia/views/editor/EditorWindow.axaml
@@ -49,7 +49,7 @@
 			<Grid.RowDefinitions>
 				<RowDefinition Height="*" />
 				<RowDefinition Height="1" />
-				<RowDefinition Height="200" />
+				<RowDefinition Height="200" MaxHeight="200" />
 			</Grid.RowDefinitions>
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*" />
@@ -102,7 +102,14 @@
 
 						<Grid.ContextMenu>
 							<ContextMenu>
-								<MenuItem Command="{Binding AddPointLight}" Header="Add Point of Light" />
+								<MenuItem Header="Light">
+									<MenuItem Command="{Binding AddPointLight}" Header="Add Point of Light" />
+									<MenuItem Command="{Binding AddDirectLight}" Header="Add Direct of Light" />
+									<MenuItem Command="{Binding AddSpotLight}" Header="Add Spot of Light" />
+								</MenuItem>
+								<MenuItem Header="Camera">
+									<MenuItem Header="Add Camera" />
+								</MenuItem>
 							</ContextMenu>
 						</Grid.ContextMenu>
 					</Grid>
@@ -125,7 +132,10 @@
                 Grid.Column="0"
                 Background="#181818"
                 ResizeDirection="Rows" />
-			<local:AssetsView Grid.Row="2" Grid.Column="0" />
+			<local:AssetsView
+                Grid.Row="2"
+                Grid.Column="0"
+                MaxHeight="200" />
 		</Grid>
 	</DockPanel>
 </Window>
