--- a/EditorAvalonia/views/scene/Scene.axaml
+++ b/EditorAvalonia/views/scene/Scene.axaml
@@ -1,36 +1,58 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="EditorAvalonia.views.scene.Scene"
-		xmlns:local="clr-namespace:EditorAvalonia"
-		xmlns:core="clr-namespace:Core.models;assembly=Core"
-		xmlns:vm="clr-namespace:EditorAvalonia.viewmodels"
-		x:DataType="vm:SceneViewModel"
-        Title="Scene">
+<Window
+    x:Class="EditorAvalonia.views.scene.Scene"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:core="clr-namespace:Core.models;assembly=Core"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:EditorAvalonia"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:EditorAvalonia.viewmodels"
+    Title="Scene"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    x:DataType="vm:SceneViewModel"
+    Background="#181818"
+    mc:Ignorable="d">
 
 	<StackPanel Margin="10">
 		<StackPanel>
-			<Grid Margin="10"
-				  ColumnDefinitions="100,*,*"
-				  RowDefinitions="Auto,Auto,Auto">
-				<TextBlock Grid.Row="1" Grid.Column="0" Margin="0,10,10,5" Text="Scene Name"/>
-				<TextBox Text="{Binding SceneName, Mode=TwoWay}"  Grid.Row="1" Grid.Column="1" Margin="0,0,10,5" Watermark="Scene Name"/>
-				<Button Grid.Row="1" Grid.Column="2" Margin="0,0,0,5" Content="Save" Command="{Binding SaveScene}"/>
+			<Grid
+                Margin="10"
+                ColumnDefinitions="100,*,*"
+                RowDefinitions="Auto,Auto,Auto">
+				<TextBlock
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Margin="0,10,10,5"
+                    Text="Scene Name" />
+				<TextBox
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Margin="0,0,10,5"
+                    Text="{Binding SceneName, Mode=TwoWay}"
+                    Watermark="Scene Name" />
+				<Button
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Margin="0,0,0,5"
+                    Command="{Binding SaveScene}"
+                    Content="Save" />
 			</Grid>
 
 		</StackPanel>
-		<TextBlock Text="Scene disponibile" FontSize="16" FontWeight="Bold"/>
-		<ListBox x:Name="SceneList"
-				 Height="300"
-			      ItemsSource="{Binding Scenes}"
-                  SelectedItem="{Binding SelectedScene}"
-				>
+		<TextBlock
+            FontSize="16"
+            FontWeight="Bold"
+            Text="Scene disponibile" />
+		<ListBox
+            x:Name="SceneList"
+            Height="300"
+            ItemsSource="{Binding Scenes}"
+            SelectedItem="{Binding SelectedScene}">
 			<ListBox.ItemTemplate>
 				<DataTemplate x:DataType="core:SceneInfo">
 					<StackPanel>
-						<TextBlock Text="{Binding Name}" FontWeight="Bold"/>
+						<TextBlock FontWeight="Bold" Text="{Binding Name}" />
 					</StackPanel>
 				</DataTemplate>
 			</ListBox.ItemTemplate>
